--- a/HotelFrontdesk/app/config/config.yml
+++ b/HotelFrontdesk/app/config/config.yml
@@ -31,6 +31,7 @@ framework:
     assets: ~
     php_errors:
         log: true
+    ide: 'myide://open?url=file://%%f&line=%%l'
 
 # Twig Configuration
 twig:
