--- a/HotelFrontdesk/app/config/security.yml
+++ b/HotelFrontdesk/app/config/security.yml
@@ -2,7 +2,7 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        App\Entity\User:
+        AppBundle\Entity\User:
             algorithm: bcrypt
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
@@ -24,6 +24,9 @@ security:
                 login_path: login
                 check_path: login
                 default_target_path: admin_index
+            logout:
+                path: logout
+                target: /
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
