--- a/HotelFrontdesk/.gitignore
+++ b/HotelFrontdesk/.gitignore
@@ -2,7 +2,7 @@
 /app/config/parameters.yml
 /build/
 /phpunit.xml
-/var/*
+/var/
 !/var/cache
 /var/cache/*
 !var/cache/.gitkeep
@@ -14,3 +14,4 @@
 !var/sessions/.gitkeep
 !var/SymfonyRequirements.php
 /vendor/
+/web/
